third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-stable/transmute-mut-src-not-a-reference.stderr
error[E0308]: mismatched types
  --> tests/ui-stable/transmute-mut-src-not-a-reference.rs:17:53
   |
17 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(0usize);
   |                                      ---------------^^^^^^-
   |                                      |              |
   |                                      |              expected `&mut _`, found `usize`
   |                                      expected due to this
   |
   = note: expected mutable reference `&mut _`
                           found type `usize`
help: consider mutably borrowing here
   |
17 | const SRC_NOT_A_REFERENCE: &mut u8 = transmute_mut!(&mut 0usize);
   |                                                     ++++
